Added lincheck tests template